# services/gateway/src/v1/routes/heatmap.ts
@@ -3,8 +3,9 @@ import type { Express } from 'express';
 import { defaultEndpointsFactory, ResultHandler } from 'express-zod-api';
 import { z } from 'zod';
 
-import { AnalyticsServiceClient } from '../../clients';
+import { AnalyticsServiceClient, MLServiceClient } from '../../clients';
 import * as AnalyticsService from '../../generated/analytics_service';
+import * as MLService from '../../generated/ml_service';
 import { ReadingTimespan } from '../../generated/reading';
 
 export const FetchHeatmapEndpointRequestSchema = z.object({
@@ -33,48 +34,8 @@ export const FetchHeatmapEndpoint = defaultEndpointsFactory.build({
 
 		console.log('Received /api/heatmap request with query:', req.query);
 
-		// Validate query parameters.
-		if (
-			typeof req.query.timespan !== 'string' &&
-			req.query.timespan !== undefined
-		) {
-			return res.status(400).send({ message: 'Invalid timespan' });
-		}
-
-		// Fetch heatmap based on query.
-		let timespan: ReadingTimespan;
-		switch (req.query.timespan?.toLowerCase()) {
-			case 'hour':
-				timespan = ReadingTimespan.HOUR;
-				break;
-			case 'day':
-				timespan = ReadingTimespan.DAY;
-				break;
-			case 'week':
-				timespan = ReadingTimespan.WEEK;
-				break;
-			case 'month':
-				timespan = ReadingTimespan.MONTH;
-				break;
-			default:
-				return res.status(400).send({ message: 'Invalid timespan' });
-		}
-
-		let similarity: string[] = [];
-		if (req.query.similarity) {
-			// Check if similarity is a string.
-			if (typeof req.query.similarity === 'string') {
-				similarity.push(req.query.similarity);
-			} else if (Array.isArray(req.query.similarity)) {
-				similarity = req.query.similarity as string[];
-			}
-		}
-
-		const fetchRes = await AnalyticsServiceClient.FetchHeatmap(
-			AnalyticsService.FetchHeatmapRequest.create({
-				timespan: timespan,
-				similarity: similarity,
-			}),
+		const fetchRes = await MLServiceClient.FetchLatestData(
+			MLService.FetchLatestDataRequest.create({})
 		);
 
 		res.send(fetchRes);
